fixing footer for mobile - social images still slightly off-center, idk why

--- a/style.css
+++ b/style.css
@@ -3,13 +3,15 @@ body{
 }
 
 h1 {
-  font-family: 'Helvetica'
-  font-size: 0.5em
+  font-family: Helvetica;
+  font-size: 2em
+  margin-bottom: 0;
 }
 
 h2 {
-  font-family: 'Domine'
-  font-size: 0.5em
+  font-family: 'Domine';
+  font-size: 1em
+  margin-top: 0;
 }
 
 h3 {
@@ -104,48 +106,54 @@ img {
 /* FOOTER */
 
 .footer {
-  width: 100%;
   background-color: #2F4879;
+  margin-left: 0;
+  margin-right: 0;
 }
 
-.footer img {
-  width: 150px;
+.footer-missourian img {
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
-.footer-missourian p {
-  text-weight: 0.1em;
+.footer-umextension img {
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
-.footer a:link, a:visited {
-  text-decoration: none;
-}
-
-.footer-missourian {
-  width: 40%;
-  padding-left: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-
-.footer-missourian p {
-margin-bottom: -10px;
-}
-
-.footer-umextension {
-  width: 40%
-}
-
-#socials {
+#socialsmissourian {
   list-style-type: none;
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
-#socials img {
+#socialsmissourian li {
+  padding: 10px;
+}
+
+#socialsmissourian img {
   width: 25px;
 }
 
+#socialsextension {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#socialsextension li {
+  padding: 10px;
+}
+
+#socialsextension img {
+  width: 25px;
+}
 
 /* ABOUT PAGES */
 #about {
